# changelog-updater

./: .gitignore  README.md  pyproject.toml
changelog_updater/: __main__.py  main.py
tests/: changelog_updater_test.py  conftest.py
