[tool.poetry]
name = "changelog-updater"
version = "0.1.0"
description = "Update your changelog"
authors = ["Jorge Alvarado <alvaradosegurajorge@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
changelog-updater = "changelog_updater.main:main"

[tool.coverage.run]
omit = ["changelog_updater/__main__.py"]
